--- a/orderedlist.html
+++ b/orderedlist.html
@@ -38,7 +38,7 @@
             <li>Different Item</li>
         </ol>
 
-        h1>This is a Demo of Ordered Lists roman numerals in HTML</h1>
+        <h1>This is a Demo of Ordered Lists roman numerals in HTML</h1>
 
         <ol type="I">
             <li>Item</li>
