--- a/orderedlist.html
+++ b/orderedlist.html
@@ -26,8 +26,8 @@
 
         <h1>This is a Demo of Ordered Lists with letters in HTML</h1>
 
-        <ol type="A
-        ">
+        <ol type="A">
+            
             <li>Item</li>
             <ol type="a">
                 <li>Sub Item</li>
