--- a/orderedlist.html
+++ b/orderedlist.html
@@ -27,8 +27,8 @@
 
         <h1>This is a Demo of Ordered Lists with letters in HTML</h1>
 
-        <ol type="A">
-            
+        <ol type="A
+        ">
             <li>Item</li>
             <ol type="a">
                 <li>Sub Item</li>
@@ -39,7 +39,7 @@
             <li>Different Item</li>
         </ol>
 
-        <h1>This is a Demo of Ordered Lists roman numerals in HTML</h1>
+        h1>This is a Demo of Ordered Lists roman numerals in HTML</h1>
 
         <ol type="I">
             <li>Item</li>
