--- a/MediaQueryDemo.html
+++ b/MediaQueryDemo.html
@@ -1,20 +1,8 @@
 <html>
 
     <head>
-        <title>My Home Page</title>
-
-        <!--
-            Comments in HTML
-        -->
-
-        <style>
-            /* Comments in CSS */
-            body {
-                background-color: bisque;
-            }
-        </style>
-
-        <link rel="stylesheet" href="CSSdemo.css">
+        <title>Media Query Demo</title>
+        <link rel="stylesheet" href="boxstyle.css">
     </head>
 
     <body>
@@ -30,15 +18,19 @@
             <a href="cssdemo.html">CSS Demo</a>
             <a href="MediaQueryDemo.html">Media Query Demo</a>
         </ul>
-    </center>
+        </center>
     
-        <h1 class="Blue">Make Me Blue</h1>
-        <h1 class="Purple">Make me Purple</h1>
-        <h1 id="Red">Make Me Red</h1>
-        <h1 class="alignLeft">Left</h1>
-        <h1 class="alignCenter">Center</h1>
-        <h1 class="alignRight">Right</h1>
-        <h1 class="alignCenter white blackBackground">White Text Black Background</h1>
+        <center>
+           <h2>Media Query Demo</h2>
+           <h3>Change the width of the page to see changes in the page</h3>
+        </center>
+
+        <div class="box greenbox"></div>
+        <div class="box redbox"></div>
+        <div class="box bluebox"></div>
+        <div class="box violetbox"></div>
+        <div class="box yellowbox"></div>
+
     
         <footer>
             <center>
