--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <a href="orderedlist.html">Ordered List</a>
             <a href="tabledemo.html">Table Demo</a>
             <a href="cssdemo.html">CSS Demo</a>
+            <a href="MediaQueryDemo.html">Media Query Demo</a>
         </ul>
     </center>
     
