--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
             <a href="tabledemo.html">Table Demo</a>
             <a href="cssdemo.html">CSS Demo</a>
             <a href="MediaQueryDemo.html">Media Query Demo</a>
+            <a href="travel.html">Travel Page</a>
         </ul>
     </center>
     
-        <p>Welcome to my IST 226 Homepage!</p>
+    <p>Welcome to my IST 226 Homepage!</p>
     
         <footer>
             <center>
