--- a/MediaQueryDemo.html
+++ b/MediaQueryDemo.html
@@ -18,6 +18,7 @@
             <a href="cssdemo.html">CSS Demo</a>
             <a href="MediaQueryDemo.html">Media Query Demo</a>
             <a href="travel.html">Travel Page</a>
+            <a href="jsdemo.html">JavaScript Demo</a>
         </ul>
         </center>
     
