--- a/travel.html
+++ b/travel.html
@@ -17,6 +17,7 @@
             <a href="cssdemo.html">CSS Demo</a>
             <a href="MediaQueryDemo.html">Media Query Demo</a>
             <a href="travel.html">Travel Page</a>
+            <a href="jsdemo.html">JavaScript Demo</a>
         </ul>
     </center>
     
@@ -24,13 +25,13 @@
             <h1>My Dream Vacation Location - Saas-Fee Switzerland</h1>
             <h2>Click each image to view the full size version</h2>
             <a href="media/SaasFee1.jpg">
-                <img src="Media/SaasFee1.jpg" width="400" height="200" title="Saas-Fee Image #1"
+                <img src="media/SaasFee1.jpg" width="400" height="200" title="Saas-Fee Image #1"
             </a>
             <a href="media/SaasFee2.jpg">
-                <img src="Media/SaasFee2.jpg" width="400" height="200" title="Saas-Fee Image #2"
+                <img src="media/SaasFee2.jpg" width="400" height="200" title="Saas-Fee Image #2"
             </a>
             <a href="media/SaasFee3.jpg">
-                <img src="Media/SaasFee3.jpg" width="400" height="200" title="Saas-Fee Image #3"
+                <img src="media/SaasFee3.jpg" width="400" height="200" title="Saas-Fee Image #3"
             </a>
             <br>
             <iframe width="1200" height="315" src="https://www.youtube.com/embed/5RnbKM4Iud8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
